syntax = "proto3";

package dev.zacsweers.metro.compiler.proto;

option java_package = "dev.zacsweers.metro.compiler.proto";
option java_multiple_files = true;

message DependencyGraphProto {
  // Required boolean "isGraph"
  bool is_graph = 1;

  // Required map of ClassIds (as strings) of provider factory classes
  // If is_graph is true, this includes _all_ inherited classes' factories too
  repeated string provider_factory_classes = 2;

  // Set of provider field names (strings). Only present if is_graph is true
  repeated string provider_field_names = 3;

  // Set of accessor callable names (strings)
  repeated string accessor_callable_names = 4;

  // Set of included class IDs (strings). Only present if is_graph is true
  repeated string included_classes = 5;

  // Set of instance field names (strings). Only present if is_graph is true
  repeated string instance_field_names = 6;

  // Bit field to represent which accessor indices are multibindings
  int32 multibinding_accessor_indices = 7;

  // Set of extended parent class IDs (strings). Only present if is_graph is true
  repeated string parent_graph_classes = 8;

  // Set of all transitively included binding container class IDs (strings)
  repeated string included_binding_containers = 9;
}

message InjectedClassProto {
  repeated string member_inject_functions = 1;
}

message MetroMetadata {
  string version = 1;

  DependencyGraphProto dependency_graph = 2;

  InjectedClassProto injected_class = 3;
}